--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,13 @@
 <resources>
     <string name="app_name">Agenda</string>
+    <string name="item1_nav">Actividad 1</string>
+    <string name="item2_nav">Actividad 2</string>
+    <string name="item3_nav">Actividad 3</string>
+    <string name="titulo_nv">NavigationDrawer con Actividades</string>
+
+    <string name="open">open</string>
+    <string name="close">close</string>
+
     <string name="senha">Senha</string>
     <string name="email">E-mail</string>
     <string name="acessar">Acessar</string>
@@ -33,4 +41,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="fragment">Flagmento</string>
+
 </resources>
